# enkay

./: .gitignore  Cargo.toml  flake.nix  grammar.pest  shell.nix
examples/: example.nk  simple.nk  wasm.nk
notes/: conversions.md  memory.md
src/: main.rs
src/parser/: ast.rs  grammar.lalrpop  lexer.rs  mod.rs  parser.rs  utils.rs
