[package]
name = "enkay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
ariadne = "0.1"
chumsky = { git = "https://github.com/zesterer/chumsky.git", rev = "a2922b14f67f8e7f4fda64df0040492513c5a0b5" }
thiserror = "1"
wasm-encoder = "0.20"
wasmtime = "4.0"
