[package]
name = "enkay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
ariadne = { git = "https://github.com/zesterer/ariadne.git", rev = "14c4c1884842caf3c1ca3384ec41e9ffdc48f108" }
chumsky = "1.0.0-alpha.0"
thiserror = "1"
wasm-encoder = "0.20"
wasmtime = "4.0"
