[package]
name = "enkay"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
lalrpop-util = "0.23.1"
thiserror = "2.0.18"
wasm-encoder = "0.245.1"
wasmtime = "43.0.0"

[build-dependencies]
lalrpop = "0.23.1"
